# zkVM-CLOB-Exchange

./: .gitignore  ARCHITECTURE_DIAGRAM.md  Cargo.toml  README.md
common/: Cargo.toml
common/src/: block.rs  lib.rs  order.rs  state.rs  traces.rs
consensus/: Cargo.toml  README.md
consensus/src/: main.rs
exchange/: API_DOCUMENTATION.md  Cargo.toml  README_BLOCK_BUILDER.md  test_exchange.py
exchange/examples/: block_builder_example.rs
exchange/src/: lib.rs  main.rs  matched_traces.rs  matching.rs  mempool.rs  order.rs  server.rs  slow_mempool.rs  state.rs
exchange/src/block/: block.rs  block_builder.rs  mod.rs
execution/: API_DOCUMENTATION.md  Cargo.toml  test_exchange.py
execution/examples/: block_builder_example.rs
execution/src/: lib.rs  main.rs  server.rs
execution/src/block/: block_builder.rs
execution/src/evm/: block_builder.rs  executor.rs  mempool.rs  mod.rs  storage.rs  trie.rs
execution/src/exchange/: matching.rs  mempool.rs  mod.rs
prover/host/: Cargo.toml
prover/host/src/: gen_stark.rs  main.rs
prover/program/: Cargo.toml
prover/program/src/: main.rs
prover/share/: Cargo.toml
prover/share/src/: lib.rs
