[package]
name = "consensus"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true