[package]
name = "exchange"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
tower-http.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
tiny-keccak.workspace = true
common = { path = "../common" }

[[example]]
name = "block_builder_example"
path = "examples/block_builder_example.rs"
