[package]
name = "exchange"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
tower-http.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
tiny-keccak.workspace = true
revm.workspace = true

alloy-consensus = "0.14.0"
alloy-eips = "0.14.0"
alloy-primitives = "1.2.1"
alloy-rpc-types-any = "0.14.0"
alloy-rpc-types-eth = "0.14.0"
hex = "0.4"
common = { path = "../common" }

[[example]]
name = "block_builder_example"
path = "examples/block_builder_example.rs"
