[package]
name = "execution"
version.workspace = true
edition.workspace = true

[lib]
name = "execution"
path = "src/lib.rs"

[[bin]]
name = "execution"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
eyre.workspace = true
lazy_static.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
tower-http.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
tiny-keccak.workspace = true
revm.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-rlp.workspace = true
hex.workspace = true
common = { path = "../common" }

[[example]]
name = "block_builder_example"
path = "examples/block_builder_example.rs"
