[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
sp1-sdk.workspace = true
log.workspace = true
env_logger.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
share = { path = "../share" }
common = { path = "../../common" }
